# fastapi-simple-redis-cache

./: .gitignore  .tool-versions  CHANGELOG.md  pyproject.toml
.github/workflows/: test.yaml
src/: main.py
src/fastapi_simple_redis_cache/: NaiveCache.py
tests/: test_main.py
