[project]
name = "fastapi-simple-redis-cache"
version = "0.1.0"
description = "Simple Cache Decorator for FastAPI"
authors = [
    {name = "Mitchell Karchemsky",email = "mitch.karchemsky@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.13.1"
commitizen = "^4.9.1"

[tool.commitizen]
version_provider = "pep621"